fix : fixed layout bug

--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 body {
-  overflow-x: hidden;
+  max-width: 100%;
 }
 
 header {
@@ -11,7 +11,7 @@ section {
   width: 100%;
   margin: auto;
   padding-top: 8vh;
-  min-height: 100vh;
+  padding-bottom: 8vh;
 }
 
 .section_title {
@@ -42,7 +42,6 @@ section {
 #profil {
   padding-top: 10vh;
   background-color: lightslategrey;
-  min-height: 100vh;
 }
 
 .profil_container {
@@ -51,16 +50,20 @@ section {
   display: flex;
   justify-content: space-around;
   flex-direction: column;
-  padding: 1%;
+  margin: 1%;
+  justify-self: center;
+}
+.profil_block {
+  height: 100%;
+  min-width: 200px;
   margin: 1%;
 }
 .profil_logo_icon {
-  width: 25%;
+  width: 50%;
   margin: auto;
 }
 .profil_logo_icon_eft {
-  height: auto;
-  width: auto;
+  width: 100%;
 }
 .profil_description {
   justify-content: center;
@@ -123,7 +126,6 @@ section {
 .portfolio {
   background-image: url("img/portfolio/portfolio_background.jpg");
   background-size: cover;
-  height: 100vh;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -187,10 +189,10 @@ section {
 }
 
 .logo {
-  height: 10vh;
+  width: 100%;
 }
 .logo_jquery {
-  height: 7vh;
+  width: 100%;
 }
 
 .level {
@@ -480,12 +482,7 @@ h4 {
   color: #f92534;
 }
 
-@media only screen and (max-width: 990px) and (min-width: 768px) {
-  .main-timeline6 .timeline:after {
-    height: 80%;
-  }
-}
-@media only screen and (max-width: 767px) {
+@media only screen and (max-width: 1000px) {
   .main-timeline6 .timeline:last-child, .main-timeline6 .timeline:nth-child(even), .main-timeline6 .timeline:nth-child(odd) {
     margin: 0;
   }
