--- a/sass_files/_components.scss
+++ b/sass_files/_components.scss
@@ -19,10 +19,11 @@
     }
 }
 
-.logo{
-    height:10vh;
-    &_jquery{
-        height:7vh;
+.logo {
+    width: 100%;
+
+    &_jquery {
+        width: 100%;
     }
 }
 
