--- a/sass_files/_layouts.scss
+++ b/sass_files/_layouts.scss
@@ -1,5 +1,5 @@
 body{
-        overflow-x:hidden;
+    max-width:100%;
 }
 
 header{
@@ -9,7 +9,7 @@ header{
 section {
     @include section-config;
     padding-top: 8vh;
-    min-height: 100vh;
+    padding-bottom:8vh;
 }
 .section {
 
@@ -41,7 +41,6 @@ section {
 #profil {
     padding-top: 10vh;
     background-color: lightslategrey;
-    min-height: 100vh;
 }
 
 .profil {
@@ -51,18 +50,21 @@ section {
         display:flex;
         justify-content:space-around;
         flex-direction:column;
-        padding:1%;
+        margin:1%;
+        justify-self:center;
+    }
+    &_block{
+        height:100%;
+        min-width:200px;
         margin:1%;
     }
 
     &_logo {
         &_icon {
-            width: 25%;
+            width: 50%;
             margin: auto;
             &_eft{
-                height:auto;
-                width:auto;
-
+                width:100%;
             }
         }
     }
@@ -129,7 +131,6 @@ section {
 .portfolio{
     background-image:url('img/portfolio/portfolio_background.jpg');
     background-size:cover;
-    height:100vh;
     @include parallax;
     &_container{
         margin:auto;
